Added configuration for bypass list.

--- a/src/configuration.html
+++ b/src/configuration.html
@@ -1,44 +1,53 @@
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Proxy Configuration</title>
-        <style>
-            div.textbox {
-                display: flex;
-                flex-direction: column;
-                padding: 2px;
-            }
 
-            button {
-                margin-bottom: 2px;
-                align-self:flex-end;
-            }
+<head>
+    <meta charset="UTF-8" />
+    <title>Proxy Configuration</title>
+    <style>
+        div.textbox {
+            display: flex;
+            flex-direction: column;
+            padding: 2px;
+        }
 
-            button:last-child {
-                margin-left: 2px;
-            }
-        </style>
-    </head>
-    <body>
-        <div style="display: flex;">
-            <div class="textbox">
-                <label>Server:</label>
-                <input type="text" id="tbServer">
-            </div>
-            <div class="textbox">
-                <label>Port:</label>
-                <input type="number" id="tbPort">
-            </div>
-            <button id="btnSet">Set</button>
-            <button id="btnClear">Clear</button>
+        button {
+            margin-bottom: 2px;
+            align-self: flex-end;
+        }
+
+        button:last-child {
+            margin-left: 2px;
+        }
+    </style>
+</head>
+
+<body>
+    <div style="display: flex;">
+        <div class="textbox">
+            <label>Server:</label>
+            <input type="text" id="tbServer">
         </div>
-        <div>
-            <label><b>Current Proxy Configuration:</b></label>
-            <pre id="lblCurrentConfiguration"></pre>
+        <div class="textbox">
+            <label>Port:</label>
+            <input type="number" id="tbPort">
         </div>
-        <div>
-            <label id="lblMsg" style="color:red;"></label>
-        </div>
-        <script src="configuration.js"></script>
-    </body>
+        <button id="btnSet">Set</button>
+        <button id="btnClear">Clear</button>
+    </div>
+    <div style="display: flex;"></div>
+    <div class="textbox">
+        <label>Bypass List:</label>
+        <textarea id="tbBypassList" rows="5"></textarea>
+    </div>
+    </div>
+    <div>
+        <label><b>Current Proxy Configuration:</b></label>
+        <pre id="lblCurrentConfiguration"></pre>
+    </div>
+    <div>
+        <label id="lblMsg" style="color:red;"></label>
+    </div>
+    <script src="configuration.js"></script>
+</body>
+
 </html>
